-remove dynop myop (TT #450); migrate obscure from regular to dynop. (partial TT #449)
-lack of existing tests for dynops, and more regimented test conditions force us to todo a codingstd test.



git-svn-id: https://svn.parrot.org/parrot/trunk@39944 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/docs/dev/events.pod
+++ b/docs/dev/events.pod
@@ -31,8 +31,7 @@ responsible for signal and IO related events.
 =head2 Events
 
 Events can be either timed (they are due after some elapsed time) or untimed.
-For the former there is one API call: B<Parrot_new_timer_event>, used by the
-F<src/dynoplibs/myops.ops>:B<alarm> opcode for testing.
+For the former there is one API call: B<Parrot_new_timer_event>
 
 =head2 The B<event_thread>
 
