--- a/DEPRECATED.pod
+++ b/DEPRECATED.pod
@@ -87,7 +87,7 @@ L<https://trac.parrot.org/parrot/ticket/264>
 
 =item moved to dynop [eligible in 1.1]
 
-Parts or all of: bit.ops, debug.ops, io.ops, math.ops, obscure.ops, set.ops
+Parts or all of: bit.ops, debug.ops, io.ops, math.ops, set.ops
 (the obscure and rarely used parts), sys.ops.
 
 L<https://trac.parrot.org/parrot/ticket/449>
@@ -95,10 +95,6 @@ L<https://trac.parrot.org/parrot/ticket/449>
 =item experimental ops [eligible in 1.1]
 
 F<src/ops/experimental.ops> - only the C<trap> opcode remains
-
-=item myops [eligible in 1.1]
-
-L<https://trac.parrot.org/parrot/ticket/450>
 
 =item get_addr and set_addr [eligible in 1.5]
 
