[pdd] Add notes about packaging and distribution to Install PDD. Answer to TT #594.
git-svn-id: https://svn.parrot.org/parrot/trunk@40146 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/docs/pdds/pdd30_install.pod
+++ b/docs/pdds/pdd30_install.pod
@@ -144,6 +144,15 @@ automatically converted to backslashes for MSWin32 and C<\n> is
 converted to C<\r\n> for MSWin32 nmake. See
 L<Parrot::Configure::Compiler>.
 
+=head3 Packaging and Distribution
+
+Each language, operating system, or distribution is free to package
+modules in their own way, using their own usual build and install tools.
+The default distribution format is a tarball containing the source files
+and a cross-platform build infrastructure (the 'make' variants are a
+good choice, and can be combined with Autoconf, CMake, Perl, Python,
+etc. for more complex conditional builds).
+
 =head2 Attachments
 
 None.
