Mark OpenGL binding and related libraries experimental
git-svn-id: https://svn.parrot.org/parrot/trunk@40148 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/DEPRECATED.pod
+++ b/DEPRECATED.pod
@@ -412,6 +412,10 @@ L<https://trac.parrot.org/parrot/ticket/753>
 
 L<https://trac.parrot.org/parrot/ticket/754>
 
+=item OpenGL bindings and libraries [experimental]
+
+L<https://trac.parrot.org/parrot/ticket/852>
+
 =back
 
 =head1 Footnotes
