Add more deprecations for Iterator and VTABLE
git-svn-id: https://svn.parrot.org/parrot/trunk@40174 d31e2699-5ff4-0310-a27c-f18f2fbe73fe

--- a/DEPRECATED.pod
+++ b/DEPRECATED.pod
@@ -79,6 +79,27 @@ L<https://trac.parrot.org/parrot/ticket/679>
 
 L<https://trac.parrot.org/parrot/ticket/264>
 
+=item Direct creation of Iterator [eligible in 1.5]
+
+Iterator PMC became pure interface class and direct creation of them is
+deprecated. Use C<iter> opcode instead.
+
+Code will become runtime error:
+
+  $P0 = new 'Iterator', aggr
+
+Proper invocation:
+
+  $P0 = iter arrg
+
+L<https://trac.parrot.org/parrot/ticket/811>
+
+=item VTABLE nomenclature. [eligible in 1.5]
+
+Current list of VTABLE functions will be reviewed and cleaned.
+
+L<https://trac.parrot.org/parrot/ticket/866>
+
 =back
 
 =head1 Opcodes
