--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,8 @@ New in 1.4.0
   + C indentation coding standards test improvement
   + Hashes can use native types as keys and values
   + Beginnings of OpenGL::Math library; OpenGL bindings and library marked experimental
+- Documentation
+  + Listed candidates for embedding API (docs/embed.pod)
 
 New in 1.3.0
 - Core
